# API/api/controllers/products.js
@@ -1,22 +1,24 @@
 (function () {
  'use strict';
    // this function is strict...
+   var apikey="HSVyp1jqaZ3kUZWAxqyVgGWgqRprT9N2";
 
 
    var request = require("request");
 
    module.exports = {
-    getProducts: products
+    getProducts: products,
+    getProduct: product
   };
 
 
   function products(req, res) {
 
-    var apikey="HSVyp1jqaZ3kUZWAxqyVgGWgqRprT9N2";
     var keyword = req.swagger.params.keyword.value;
+    var store = req.swagger.params.store.value || "Sears";
 
     var options ={
-      "url":"http://api.developer.sears.com/v2.1/products/search/Sears/json/keyword/"+keyword+"?apikey="+apikey,
+      "url":"http://api.developer.sears.com/v2.1/products/search/"+store+"/json/keyword/"+keyword+"?apikey="+apikey,
       "headers": {
         "Content-Type": "application/json"
       }
@@ -33,6 +35,23 @@
           res.json(JSON.parse(body));
         }
       });
+  }
+
+
+  function product(req, res){
+
+    var partnum = req.swagger.params.partnum.value;
+    var store = req.swagger.params.store.value || "Sears";
+    request("http://api.developer.sears.com/v3/productDetail/getProduct/"+store+"/json/"+partnum+"?apikey="+apikey, function(error, response, body){
+
+      if(error){
+        res.send(error);
+      }else{
+        res.json(JSON.parse(body));
+      }
+
+    });
+
 
   }
 
